# telltaled

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile  package-lock.json  package.json
.sandcastle/: .env.example  .gitignore  Dockerfile  README.md  iterate-prompt.md  iterate.mts  lib.mts  main.mts  prompt.md  run.mts
crates/telltaled/: Cargo.toml
crates/telltaled/src/: config.rs  lib.rs  loadavg.rs  main.rs
crates/telltaled/tests/: cli.rs
docs/: COMMIT_STYLE.md
docs/adr/: 0000-template.md  0001-name-the-system-telemetry-daemon-telltaled.md  0002-first-transport-http-push-to-yggio-via-ureq-rustls.md  0003-best-effort-telemetry-drop-and-log-no-buffering.md  0004-deployment-model-env-config-and-hardened-system-service.md  README.md
docs/prd/: 0001-mvp-loadavg-to-yggio.md
issues/: 001-m0-one-shot-load-sample-to-stdout.md  README.md
