[package]
name = "telltaled"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "System telemetry daemon: surfaces the hidden state of a machine."
publish = false               # personal/unpublished; flip to publish deliberately.

# `telltaled` is one package exposing both a library (the testable core, src/lib.rs)
# and a thin binary (the resident daemon, src/main.rs). Cargo auto-detects both
# targets and names them after the package.

[dependencies]

[dev-dependencies]
proptest = "1"                # property tests for the parser invariants (#1).

# Inherit the workspace-wide quality guardrails (see root Cargo.toml).
[lints]
workspace = true
